# Denok

./: .dockerignore  .env.development  .gitignore  Denok.sln  Makefile  README.md  docker-compose.yml
Denok.Lib/: Denok.Lib.csproj
Denok.Lib/Database/Elastic/: Config.cs  Elastic.cs
Denok.Lib/Database/Mongo/: Config.cs  Mongo.cs  MongoExt.cs
Denok.Lib/Database/Redis/: Config.cs  Redis.cs
Denok.Lib/Ext/: Ext.cs
Denok.Lib/LinkGenerator/: LinkGenerator.cs
Denok.Lib/PasswordHasher/: Pbkdf2.cs
Denok.Lib/Qr/: QrGenerator.cs
Denok.Lib/Shared/: Constants.cs  Response.cs  Result.cs
Denok.Redirector/: Denok.Redirector.csproj  Dockerfile  Program.cs  README.md  RedirectorController.cs  Startup.cs
Denok.Redirector/Properties/: launchSettings.json
Denok.Web/: Denok.Web.csproj  Dockerfile  Makefile  Program.cs  Startup.cs
Denok.Web/Config/: Config.cs
Denok.Web/Controllers/: ErrorController.cs  HomeController.cs
Denok.Web/Middleware/: BasicAuthMiddleware.cs  CustomErrorMiddleware.cs
Denok.Web/Models/: ErrorViewModel.cs
Denok.Web/Properties/: launchSettings.json
Denok.Web/Utils/: Constants.cs  Utils.cs
Denok.Web/Views/: _ViewImports.cshtml
denok-redirector-rs/: .env-example  Cargo.toml  Dockerfile  Makefile  README.md
denok-redirector-rs/src/: config.rs  lib.rs  logger.rs  main.rs
denok-redirector-rs/src/database/mongo/: mod.rs
denok-redirector-rs/src/modules/link/: mod.rs
docs/: DenokApi.postman_collection.json  DenokApiEnv.postman_environment.json
nginx/: nginx-dashboard.conf  nginx-redirector.conf
scripts/: 001_users.js
(+42 files in other folders)
