[package]
name = "denok-redirector-rs"
version = "0.1.0"
authors = ["Wuriyanto <wuriyanto48@yahoo.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redirector"
path = "src/lib.rs"

[[bin]]
name = "redirector"
path = "src/main.rs"

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
serde = "1.0.132"
chrono = "0.4"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]